--- a/docs/style.css
+++ b/docs/style.css
@@ -115,6 +115,13 @@ nav.main-nav-link:hover {
     border-radius: 8px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   }
+.hero-video {
+    width: 100%;  /* Makes the video responsive */
+    height: auto; /* Maintains aspect ratio */
+    max-width: 650px; /* Ensures it doesn't exceed its container */
+    border-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
   
   /* About Section */
   .section-about {
